# spack-benchmark

./: .gitignore  README.md  pyproject.toml  script.py
benchmark/cmd/: solve_benchmark.py
src/spack_solver_benchmark/: __init__.py
src/spack_solver_benchmark/spack-solver-benchmark/solver_benchmark/cmd/: solve_benchmark.py
src/spack_solver_benchmark/spack-solver-benchmark/solver_benchmark/cmd/data/: radiuss.txt
