[project]
name = "spack_solver_benchmark"
description = "Extension commands to benchmark Spack"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["scipy", "tabulate", "pandas", "matplotlib"]

[project.optional-dependencies]
dev = ["black"]

[project.entry-points."spack.extensions"]
spack_solver_benchmark = "spack_solver_benchmark:get_spack_extension_paths"

[project.entry-points."spack.config"]
spack_solver_benchmark = "spack_solver_benchmark:get_spack_config_dir"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spack_solver_benchmark = ["spack-solver-benchmark/solver_benchmark/cmd/data/*.txt"]

[tool.black]
line-length = 99
